--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ title: Photo Art Rental New Zealand
         </div>
     </section>
 
-    <!-- About Section -->
+    <!-- About Section  Hidden for now SB 30/7/15
     <section id="about" class="bg-light-gray">
         <div class="container">
             <div class="row">
@@ -64,7 +64,7 @@ title: Photo Art Rental New Zealand
                  </div>
             </div>
         </div>
-    </section>
+    </section -->
 
     <!--
     <section id="team" class="bg-light-gray">
@@ -96,18 +96,19 @@ title: Photo Art Rental New Zealand
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Feel free to message or ring.</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
                     <div class="col-md-6 col-md-push-6 contact-text">
                         <h3>Photo Art Rental New Zealand Ltd</h3>
+                        <h4>15 First Ave, Tauranga</h4>
                         <h4>P: +64 7 788 4077</h4>
                         <h4>E: info@photoartrental.co.nz</h4>
                     </div>
                     <div class="col-md-6 col-md-pull-6">
-                        <form class="form" id="contactForm" action="//formspree.io/bonneysamuel@gmail.com" method="post">
+                        <form class="form" id="contactForm" action="//formspree.io/info@photoartrental.co.nz" method="post">
                           <div class="form-group">
                             <input class="form-control" type="text" name="Name" placeholder="Your name">
                           </div>
