Changed thanks page from IOCA to PARNZ

--- a/thanks.html
+++ b/thanks.html
@@ -1,13 +1,13 @@
 ---
 layout: thanks
-title: Message sent to Invisible Office Chartered Accountants
+title: Message sent to Photo Art Rental New Zealand Ltd
 ---
 
 <section id="thanks">
     <div class="container">
         <div class="row row-buffer">
             <div class="col-xs-6 col-xs-offset-3">
-              <img class="img-responsive" src="/img/logos/IOCA-logo-trans.png">
+              <img class="img-responsive" src="../img/logos/PARNZ-logo.png">
             </div>
         </div>
         <div class="row">
