removed unneeded image files. fixed image link on thanks

--- a/thanks.html
+++ b/thanks.html
@@ -7,7 +7,7 @@ title: Message sent to Photo Art Rental New Zealand Ltd
     <div class="container">
         <div class="row row-buffer">
             <div class="col-xs-6 col-xs-offset-3">
-              <img class="img-responsive" src="../img/logos/PARNZ-logo.png">
+              <img class="img-responsive" src="/img/PARNZ-logo.png">
             </div>
         </div>
         <div class="row">
