centred logo on thanks

--- a/thanks.html
+++ b/thanks.html
@@ -6,9 +6,7 @@ title: Message sent to Photo Art Rental New Zealand Ltd
 <section id="thanks">
     <div class="container">
         <div class="row row-buffer">
-            <div class="col-xs-6 col-xs-offset-3">
-              <img class="img-responsive" src="/img/PARNZ-logo.png">
-            </div>
+            <img class="img-responsive center-block" src="/img/PARNZ-logo.png">
         </div>
         <div class="row">
             <div class="col-lg-12 text-center">
